# ml-audit-env-paper

./: .gitignore  CHANGELOG.md  DATASHEET.md  Dockerfile  MLAuditBench_NeurIPS_GapAnalysis_v3 (1).docx  README.md  adversarial_agents.py  all_results.txt  app.py  croissant.json  eval_results.json  human_evaluation.txt  inference.py  inference.py.bak  openenv.yaml  pyproject.toml  requirements.txt  validate.sh  verify_submission.py
environment/: __init__.py  env.py  generator.py  grader.py  models.py
eval_logs/: baseline_stats.json
human_evaluation_kit/: 01_facilitator_protocol.md  02_participant_instructions.md  03_artifact_packet_spec.md  04_scoring_and_reporting.md  README.md
logs/: baseline_results.jsonl  baseline_summary.json  inference_end_scores_20260419.csv  inference_end_scores_20260419_envkey.csv  inference_end_scores_20260420.csv  inference_raw_20260419.txt  inference_raw_20260419_envkey.txt  inference_raw_20260420.txt  inference_summary_20260419.txt  inference_tabular_20260419.tex  v2_gpt41_20260502.txt  v2_gpt41_raw.txt  v2_o4mini_raw.txt
neurips_2026_submission/: croissant.json  submission_checklist.md
paper/: .gitignore  checklist.tex  main.tex  main_v2.tex  references.bib  supplement.tex
results/: ablation_threshold.json
scripts/: ablation_threshold.py  parse_logs.py  parse_v2_results.py  run_baselines.py  run_evaluation.py  run_hf_eval.py  run_v2_eval.sh
tests/: __init__.py  test_actions.py  test_clean_scoring.py  test_compound.py  test_evidence_matching.py  test_grader.py  test_inference_helpers.py  test_pool_integrity_extended.py  (+2 more)
(+12 files in other folders)
